// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render a checkbox partially checked 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-3 {
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 400;
  font-size: 14px;
  color: rgb(84,103,137);
  white-space: normal;
  text-overflow: initial;
  overflow: visible;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3:hover {
  text-decoration: inherit;
}

.emotion-3 strong {
  font-weight: 500;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-radius: 3px;
  border: 1px solid rgb(176,186,195);
  -webkit-transition: 100ms ease-in-out background-color,border-color;
  transition: 100ms ease-in-out background-color,border-color;
  height: 14px;
  width: 14px;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: rgb(255,255,255);
  background-color: rgb(249,250,252);
  background-image: url(path/to/file);
  border: 1px solid rgb(84,195,219);
}

<div
  aria-checked="mixed"
  className="emotion-4 emotion-5"
  data-test="ui-checkbox"
  disabled={false}
  name={undefined}
  onClick={undefined}
  role="checkbox"
>
  <div
    checked={false}
    className="emotion-0 emotion-1"
    disabled={false}
    size="medium"
    style={Object {}}
  />
  <span
    className="emotion-2 emotion-3"
    color="navy600"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A checkbox label
  </span>
</div>
`;

exports[`Checkbox should render a checkbox with label 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-radius: 3px;
  border: 1px solid rgb(176,186,195);
  -webkit-transition: 100ms ease-in-out background-color,border-color;
  transition: 100ms ease-in-out background-color,border-color;
  height: 14px;
  width: 14px;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: rgb(255,255,255);
  background-color: rgb(249,250,252);
  background-image: url(path/to/file);
  border: 1px solid rgb(84,195,219);
}

.emotion-3 {
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 400;
  font-size: 14px;
  color: rgb(84,103,137);
  white-space: normal;
  text-overflow: initial;
  overflow: visible;
  white-space: pre-wrap;
  word-break: break-word;
}

.emotion-3:hover {
  text-decoration: inherit;
}

.emotion-3 strong {
  font-weight: 500;
}

<div
  aria-checked={true}
  className="emotion-4 emotion-5"
  data-test="ui-checkbox"
  disabled={false}
  name={undefined}
  onClick={undefined}
  role="checkbox"
>
  <div
    checked={true}
    className="emotion-0 emotion-1"
    disabled={false}
    size="medium"
    style={Object {}}
  />
  <span
    className="emotion-2 emotion-3"
    color="navy600"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A checkbox label
  </span>
</div>
`;

exports[`Checkbox should render shallow component ok 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-radius: 3px;
  border: 1px solid rgb(176,186,195);
  -webkit-transition: 100ms ease-in-out background-color,border-color;
  transition: 100ms ease-in-out background-color,border-color;
  height: 14px;
  width: 14px;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: rgb(255,255,255);
  background-color: rgb(249,250,252);
  background-image: url(path/to/file);
  border: 1px solid rgb(84,195,219);
}

<div
  aria-checked={true}
  className="emotion-2 emotion-3"
  data-test="ui-checkbox"
  disabled={false}
  name={undefined}
  onClick={undefined}
  role="checkbox"
>
  <div
    checked={true}
    className="emotion-0 emotion-1"
    disabled={false}
    size="medium"
    style={Object {}}
  />
</div>
`;
